--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,30 @@
 .wp-block-create-block-techearty-teams {
-	display: flax;
+	display: flex;
 	flex-wrap: wrap;
+	margin-left: -10px;
+	margin-right: -10px;
+
+    @for $i from 1 through 56 {
+        &.has-#{$i}-columns {
+           .wp-block-create-block-techearty-team{
+				width: calc(100% / #{$i} - 20px);
+            }
+        }
+    }
+	.wp-block-create-block-techearty-team{
+		margin: 10px;
+		h4 {
+			color: #222;
+			font-size: 35px;
+			font-size: bold;
+			margin: 0;
+		}
+		p{
+			color: #565656;
+			font-size: 16px;
+			font-weight: 300;
+			margin-bottom: 5px;
+			margin-top: 5px;
+		}
+	}	
 }
